# healthcare-policy-claims-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  HANDOFF.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 2026_01_01_0001-0001_initial_schema.py  2026_01_02_0002-0002_phase3_indexes.py  2026_01_03_0003-0003_eval_columns.py  2026_01_04_0004-0004_query_log_details.py
backend/app/: __init__.py  backfill_embeddings.py  main.py  recreate_embedding_column.py  seed_policies.py
backend/app/api/: routes_agents.py  routes_auth.py  routes_documents.py  routes_eval.py  routes_health.py  routes_metrics.py  routes_rag.py
backend/app/core/: config.py  errors.py  logging.py  observability.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/schemas/: agents.py  auth.py  documents.py  eval.py  rag.py
backend/app/services/: chunking.py  document_loader.py  embeddings.py  evaluation.py  generation.py  ingestion.py  reranking.py  retrieval.py  vector_store.py
backend/app/services/agents/: __init__.py  runner.py  state.py  tools.py  workflows.py
backend/app/utils/: ids.py  text.py
backend/tests/: conftest.py  test_agents.py  test_chunking.py  test_document_loader.py  test_documents_api.py  test_embeddings.py  test_evaluation.py  test_generation.py  test_health.py  test_observability.py  test_rag_api.py  test_retrieval.py  test_security.py  test_text_utils.py
docs/: 01_project_overview.md  02_architecture.md  04_rag_pipeline.md  05_agentic_workflows.md  06_evaluation.md  07_testing_strategy.md  09_security_and_privacy.md
frontend/: .env.example  .gitignore  .prettierignore  .prettierrc.json  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/ask/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/eval/: page.tsx
frontend/src/components/: Card.tsx  CitationCard.tsx  ConfidenceBadge.tsx  ErrorBanner.tsx  Nav.tsx
sample_data/: README.md
sample_data/claims/: README.md
sample_data/eval_questions/: README.md  healthcare_policy_eval.json
sample_data/policies/: README.md  appeal_process_policy.txt  claim_denial_policy.txt  hipaa_minimum_necessary_policy.txt  out_of_network_claim_policy.txt  prior_authorization_policy.txt  telehealth_billing_policy.txt
