# =============================================================================
# Project metadata + tool configuration.
#
# Phase 1 used `requirements.txt` + `pytest.ini` + no other configs. Phase 8
# centralizes ruff / black / mypy / coverage here so there's one place to
# adjust style and one place to look when something complains.
#
# The package itself is *not* installed (no `[project]` table that pip would
# act on) — we run the app from `backend/` with `app.main:app`. Adding a
# proper installable distribution is a Phase 10 task.
# =============================================================================

# ---------------------------------------------------------------------------
# Ruff — linter + import sorter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
# Local venv uses Python 3.10; the Docker image uses 3.11. Targeting 3.10
# means ruff won't auto-fix into 3.11-only idioms (e.g. `datetime.UTC`)
# that break the venv. The codebase stays compatible with both.
target-version = "py310"
extend-exclude = [
    ".venv",
    "alembic/versions",   # generated; don't enforce style here
]

[tool.ruff.lint]
# A small but opinionated rule set. Ordered roughly by signal-to-noise:
#   E, W : pycodestyle errors / warnings
#   F    : pyflakes (unused imports, undefined names — the high-signal stuff)
#   I    : import ordering (replaces isort)
#   B    : flake8-bugbear (mutable defaults, B008, etc.)
#   C4   : list/dict/set comprehension cleanups
#   UP   : pyupgrade (use modern Python idioms)
#   SIM  : flake8-simplify (collapse `if x: return True else: return False`)
#   RUF  : ruff-native rules (catches things others miss)
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF"]

# Things we deliberately tolerate:
#   E501 — line length is enforced by formatter, not linter
#   B008 — `Depends(...)` and `Field(...)` in default args are FastAPI / Pydantic idioms
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
# Tests can have unused imports (autouse fixtures), long lines (parametrize
# tables), and star-style assertions.
"tests/*" = ["F401", "F811"]
# `__init__.py` exists to re-export — unused imports are the point.
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]

[tool.ruff.format]
# Ruff's formatter is Black-compatible. We keep both installed so the user
# can choose; CI runs ruff format (faster).
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Black — alternative formatter (Black-compatible with ruff format)
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = '''
(
    /(
        \.venv
      | alembic/versions
    )/
)
'''

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
# Loose mode: we don't want every untyped third-party import to be an error,
# but we DO want our own functions to be checked when they have annotations.
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
# We're not chasing strict mode — that would mean annotating every test
# function. The goal of mypy here is catching real bugs, not enforcement.
strict = false

[[tool.mypy.overrides]]
# Tests are allowed to be sloppy: pytest fixtures don't carry types and
# making `monkeypatch` / `tmp_path` types align is more pain than payoff.
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
# Alembic migrations are autogenerated-style scripts; the types in
# sqlalchemy.dialects make no effort to be mypy-friendly.
module = "alembic.versions.*"
ignore_errors = true

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
omit = [
    "app/seed_policies.py",
    "app/backfill_embeddings.py",
    "app/recreate_embedding_column.py",
    # CLI scripts — exercised manually, not by the test suite.
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
# Excluding common boilerplate keeps the report focused on real gaps.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
